--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-scroll-parallax": "^2.4.0",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "prettier": "2.3.2"
