--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.7.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-parallax": "^3.3.0",
