--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.10.2",
+    "gatsby-plugin-styled-components": "^4.14.0",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
     "gsap": "^3.7.1",
@@ -23,9 +24,10 @@
     "react-helmet": "^6.1.0",
     "react-parallax": "^3.3.0",
     "react-scroll-parallax": "^2.4.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.13.2",
     "prettier": "2.3.2"
   },
   "keywords": [
