--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "emailjs-com": "^3.2.0",
     "gatsby": "^3.10.2",
     "gatsby-plugin-gatsby-cloud": "^2.10.0",
     "gatsby-plugin-image": "^1.10.1",
@@ -21,6 +23,7 @@
     "react": "^17.0.1",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-parallax": "^3.3.0",
     "react-scroll-parallax": "^2.4.0",
