--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-helmet": "^6.1.0",
     "react-parallax": "^3.3.0",
     "react-scroll-parallax": "^2.4.0",
+    "react-toastify": "^8.1.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
