--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^10.0.0",
     "emailjs-com": "^3.2.0",
     "gatsby": "^3.10.2",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.10.0",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.10.0",
@@ -16,6 +17,7 @@
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.10.2",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^4.14.0",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
