--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-parallax": "^3.3.0",
     "react-scroll-parallax": "^2.4.0",
     "react-toastify": "^8.1.0",
+    "smooth-scroll": "^16.1.3",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
