--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-offline": "^4.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-react-svg": "^3.0.1",
+    "gatsby-plugin-sass": "^5.4.0",
     "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^4.14.0",
@@ -31,6 +32,7 @@
     "react-parallax": "^3.3.0",
     "react-scroll-parallax": "^2.4.0",
     "react-toastify": "^8.1.0",
+    "sass": "^1.45.2",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^5.3.1"
   },
