--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Patryk Kubala",
   "dependencies": {
     "@pittica/gatsby-plugin-recaptcha": "^2.0.3",
     "dotenv": "^10.0.0",
@@ -13,6 +13,7 @@
     "gatsby-plugin-gatsby-cloud": "^2.10.0",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-nprogress": "^4.6.0",
     "gatsby-plugin-offline": "^4.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-react-svg": "^3.0.1",
@@ -31,6 +32,7 @@
     "react-scroll-parallax": "^2.4.0",
     "react-toastify": "^8.1.0",
     "sass": "^1.45.2",
+    "sharp": "^0.28.3",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^5.3.1"
   },
